need separate textBox-es for displaying separate parameters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SpeechAudioAnalysis</string>
     <string name="buttonOFF">Start Listening</string>
     <string name="buttonON">Stop Listening</string>
+    <string name="initValue">0.00</string>
 </resources>
