--- a/DialogflowExample/chatbot/src/main/res/values/strings.xml
+++ b/DialogflowExample/chatbot/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">API.AI Sample</string>
+    <string name="app_name">DialogflowExample</string>
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_aibutton_sample">AIButtonSampleActivity</string>
