--- a/DialogflowExample/chatbot/src/main/res/values/strings.xml
+++ b/DialogflowExample/chatbot/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="text_sample_text">Text sample</string>
     <string name="title_app_widget">Voice command</string>
     <string name="non_empty_query">Query should not be empty</string>
+    <string name="ai_button_chooser">Tap here to start chat.</string>
 
     <string name="use_bluetooth_headset">Use Bluetooth headset</string>
     
